[package]
name = "cbor"
version = "0.4.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "CBOR (binary JSON) with type based decoding and encoding."
documentation = "http://burntsushi.net/rustdoc/cbor/"
homepage = "https://github.com/BurntSushi/rust-cbor"
repository = "https://github.com/BurntSushi/rust-cbor"
readme = "README.md"
keywords = ["cbor", "json", "binary", "format", "encoding"]
license = "Unlicense/MIT"

[lib]
name = "cbor"

[dependencies]
byteorder = "0.5"
rustc-serialize = "0.3"

[dev-dependencies]
quickcheck = "0.2"
rand = "0.3"
