[workspace]
resolver = "2"
members = [".", "cbor_conv"]

[package]
name = "cbor"
version = "0.5.0"
authors = ["Andrew Gallant <jamslam@gmail.com>", "0xZensh <txr1883@gmail.com>"]
description = "A serde implementation of CBOR (RFC 8949) with a dynamic Value type and tag support."
homepage = "https://github.com/ldclabs/rust-cbor"
repository = "https://github.com/ldclabs/rust-cbor"
documentation = "https://docs.rs/cbor"
readme = "README.md"
keywords = ["cbor", "serde", "serialization", "binary", "encoding"]
categories = ["encoding", "parsing"]
license = "Unlicense OR MIT"
edition = "2021"
rust-version = "1.85"
exclude = ["doc/", ".github/"]

[lib]
name = "cbor"

[dependencies]
serde = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
hex = "0.4"

[package.metadata.docs.rs]
all-features = true
