[package]
name = "cbor_conv"
version = "0.2.2"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Command line tools for converting between CBOR and JSON."
documentation = "http://burntsushi.net/rustdoc/cbor/"
homepage = "https://github.com/BurntSushi/rust-cbor"
repository = "https://github.com/BurntSushi/rust-cbor"
readme = "README.md"
keywords = ["cbor", "json", "binary", "format", "encoding"]
license = "Unlicense/MIT"

[[bin]]
path = "./src/cbor2json.rs"
name = "cbor2json"
doc = false
test = false
bench = false

[[bin]]
path = "./src/json2cbor.rs"
name = "json2cbor"
doc = false
test = false
bench = false

[dependencies]
rustc-serialize = "*"

[dependencies.cbor]
path = ".."
version = "*"
