[package]
name = "cbor_conv"
version = "0.3.0"  #:version
authors = [
    "Andrew Gallant <jamslam@gmail.com>",
    "0xZensh <txr1883@gmail.com>",
]
description = "Command line tools for converting between CBOR and JSON."
homepage = "https://github.com/ldclabs/rust-cbor"
repository = "https://github.com/ldclabs/rust-cbor"
readme = "README.md"
keywords = ["cbor", "json", "binary", "format", "encoding"]
license = "Unlicense OR MIT"
edition = "2021"
rust-version = "1.85"

[[bin]]
path = "./src/cbor2json.rs"
name = "cbor2json"
doc = false
test = false
bench = false

[[bin]]
path = "./src/json2cbor.rs"
name = "json2cbor"
doc = false
test = false
bench = false

[dependencies]
cbor = { path = "..", version = "0.5" }
serde_json = "1.0"
